[package]
name = "sorted-channel"
version = "0.1.0"
edition = "2021"
authors = ["Kevin C. Zimmerman <kevinczimmerman@gmail.com>"]
description = "sorted message-based communication channel"
repository = "https://github.com/kczimm/sorted-channel"
keywords = ["mpmc", "channel", "sorted"]
categories = ["concurrency"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
